Refactoring yamlCombiner